@startuml classDiagramModificationsV2

title Kanban System Modifications Class Diagram
!define RECTANGLE class

' Reference classes (minimal interfaces for relationships)

' Main abstract class
abstract Modification <<abstract>>{
    - id: uuid
    '+ getId(): uuid
    '+ setId(id: uuid): void
}

' Modification classes inheriting from Modification
class ModifyTask {
    - task: Task
    '+ getTask(): Task
    '+ setTask(task: Task): void
}

class ModifyColumn {
    - column: Column
    '+ getColumn(): Column
    '+ setColumn(column: Column): void
}

class RemoveAccess {
    - lightKanban: LightKanban
    '+ getLightKanban(): LightKanban
    '+ setLightKanban(lightKanban: LightKanban): void
}

class AddAccess {
    - lightKanban: LightKanban
    '+ getLightKanban(): LightKanban
    '+ setLightKanban(lightKanban: LightKanban): void
}

class CreateColumn {
    - newColumn: Column
    '+ getNewColumn(): Column
    '+ setNewColumn(newColumn: Column): void
}

class DeleteColumn {
    - columnId: uuid
    '+ getColumnId(): uuid
    '+ setColumnId(columnId: uuid): void
}

class ModifyKanban {
    - kanban: LightKanban
    '+ getKanban(): LightKanban
    '+ setKanban(kanban: LightKanban): void
}

class CreateTask {
    - newTask: Task
    - targetColumn: uuid
    '+ getNewTask(): Task
    '+ getTargetColumn(): uuid
    '+ setNewTask(newTask: Task): void
    '+ setTargetColumn(targetColumn: uuid): void
}

class DeleteTask {
    - taskId: uuid
    '+ getTaskId(): uuid
    '+ setTaskId(taskId: uuid): void
}

class MoveTask {
    - taskId: uuid
    - targetColumn: uuid
    '+ getTaskId(): uuid
    '+ getTargetColumn(): uuid
    '+ setTaskId(taskId: uuid): void
    '+ setTargetColumn(targetColumn: uuid): void
}

class CreateMessage {
    - message: Message
    '+ getMessage(): Message
    '+ setMessage(message: Message): void
}

' ===== INHERITANCE RELATIONSHIPS =====

' Modification hierarchy
ModifyTask --|> Modification
ModifyColumn --|> Modification
ModifyKanban --|> Modification
CreateTask --|> Modification
CreateColumn --|> Modification
DeleteTask --|> Modification
DeleteColumn --|> Modification
MoveTask --|> Modification
CreateMessage --|> Modification
AddAccess --|> Modification
RemoveAccess --|> Modification
@enduml